--- a/src/gui/clasesGui/frmPuesto.form
+++ b/src/gui/clasesGui/frmPuesto.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="jpaPrincipal" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="25" left="20" bottom="25" right="20"/>
     <constraints>
-      <xy x="20" y="20" width="599" height="431"/>
+      <xy x="20" y="20" width="775" height="437"/>
     </constraints>
     <properties>
       <background color="-8600399"/>
@@ -202,6 +202,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-registrar.png"/>
               <text value="Registrar"/>
             </properties>
           </component>
@@ -210,6 +211,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-actualizar.png"/>
               <text value="Actualizar"/>
             </properties>
           </component>
@@ -218,6 +220,7 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-eliminar.png"/>
               <text value="Eliminar"/>
             </properties>
           </component>
@@ -226,6 +229,7 @@
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-buscar.png"/>
               <text value="Buscar"/>
             </properties>
           </component>
@@ -234,6 +238,7 @@
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-listar.png"/>
               <text value="Listar"/>
             </properties>
           </component>
@@ -242,6 +247,7 @@
               <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-leer.png"/>
               <text value="Leer Combo"/>
             </properties>
           </component>
