--- a/src/gui/ventanaPrincipal/frmPrincipal.form
+++ b/src/gui/ventanaPrincipal/frmPrincipal.form
@@ -27,6 +27,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-persona.png"/>
               <text value="Persona"/>
             </properties>
           </component>
@@ -35,6 +36,7 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-maquila.png"/>
               <text value="Maquila"/>
             </properties>
           </component>
@@ -48,6 +50,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-produccion.png"/>
               <text value="Produccion"/>
             </properties>
           </component>
@@ -56,6 +59,7 @@
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-factura.png"/>
               <text value="Factura"/>
             </properties>
           </component>
@@ -64,6 +68,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-cliente.png"/>
               <text value="Cliente"/>
             </properties>
           </component>
@@ -72,6 +77,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-proveedor.png"/>
               <text value="Proveedor"/>
             </properties>
           </component>
@@ -80,6 +86,7 @@
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-empleado.png"/>
               <text value="Empleado"/>
             </properties>
           </component>
@@ -88,6 +95,7 @@
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-area.png"/>
               <text value="Puesto"/>
             </properties>
           </component>
@@ -96,6 +104,7 @@
               <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/salir-40.png"/>
               <text value="Salir"/>
             </properties>
           </component>
